--- a/testeCalculo/src/main/resources/application.yml
+++ b/testeCalculo/src/main/resources/application.yml
@@ -1,3 +1,16 @@
 micronaut:
   application:
     name: testeCalculo
+datasources:
+  default:
+    url: "jdbc:postgresql://localhost:5442/proposta"
+    username: "${JDBC_DATABASE_USERNAME:keycloak}"
+    password: "${JDBC_DATABASE_PASSWORD:password}"
+    driverClassName: org.postgresql.Driver
+jpa:
+  default:
+    properties:
+      hibernate:
+        hbm2ddl:
+          auto: update
+        show_sql: true
